syntax = "proto3";

option go_package = "highvolume.io/shackle/api/grpcint";

package grpcint;

service Delegation {
	// Delegate executes a batch operation delegated by another node
	rpc Delegate (BatchOp) returns (BatchReply) {}
}

// Batch operation
message BatchOp {
	uint32 op = 1;
	bytes items = 2;
}

// Batch Reply
message BatchReply {
	string err = 1;
	bytes res = 2;
}
